# ultramemory-mcp

./: .gitignore  .mcp.json  GEMINI.md  NOTICE  README.md  __init__.py  autoconfig.py  cache.py  cli.py  gemini-extension.json  glama.json  install.sh  llms-install.md  plugin.yaml  pyproject.toml  server.json  test_autoconfig.py  test_provider.py  uninstall.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: mcp.json  plugin.json
agent-kit/: .mcp.json  HARNESS-ONBOARDING.md  LICENSE  README.md  kit-manifest.json
agent-kit/.claude-plugin/: plugin.json
agent-kit/agents/: checklist-verifier.md  checklist-worker.md
agent-kit/hooks/: cache.py  capture-hook.sh  harness-gate.sh  harness-reminder.sh  hooks.json  onboard-ultramemory.sh  recall-first-hook.sh
agent-kit/skills/atomic-level-checklist-md-confirm-approval-needed/: SKILL.md
agent-kit/skills/checklist-bound-execution/: SKILL.md
agent-kit/skills/checklist-bound-execution/references/: checklist-format.md  schemas.md  workflow-template.js
agent-kit/skills/harness/: SKILL.md
agent-kit/skills/playwright-human-mode/: SKILL.md
agent-kit/skills/research/: SKILL.md
agent-kit/skills/setup/: SKILL.md
agent-kit/skills/swarm/: SKILL.md
agent-kit/templates/: CLAUDE.md.tmpl  gate.sh.tmpl  settings.hooks.json
hooks/: README.md  capture-hook.sh  recall-first-hook.sh  recall-rule-reminder.sh
plugins/cline/: README.md  package.json
plugins/cline/src/: index.ts
plugins/ultramemory/: .mcp.json  README.md
plugins/ultramemory/.codex-plugin/: plugin.json
scripts/: .mf-get.py  export-kit.sh  kit-manifest.in  test-uninstall-parity.sh
skills/ultramemory-perplexity/: SKILL.md
skills/ultramemory-snapshot/: SKILL.md
